# sphinx-persistent-worker-prototype

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  conf.py  echo.bzl  echo.py  index.rst  worker.py
