load("@rules_python//sphinxdocs:sphinx.bzl", "sphinx_build_binary", "sphinx_docs")
load("@rules_python//sphinxdocs:sphinx_docs_library.bzl", "sphinx_docs_library")

sphinx_docs_library(
    name = "sphinx_docs_library",
    srcs = [
        "index.rst",
    ],
)

sphinx_build_binary(
    name = "sphinx_build_binary",
    deps = [
        "@pypi//sphinx",
    ]
)

sphinx_docs(
    name = "sphinx_docs",
    config = "conf.py",
    formats = [
        "html",
    ],
    sphinx = ":sphinx_build_binary",
    deps = [
        ":sphinx_docs_library",
    ],
    extra_opts = [
        "--fail-on-warning",
    ],
)
